--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,5 +1,105 @@
+@font-face {
+  font-family: "ClearSans-Bold";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/ClearSans-Bold/ClearSans-Bold.eot") format("embedded-opentype"), url("../fonts/ClearSans-Bold/ClearSans-Bold.woff") format("woff"), url("../fonts/ClearSans-Bold/ClearSans-Bold.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "ClearSans-Regular";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/ClearSans-Regular/ClearSans-Regular.eot") format("embedded-opentype"), url("../fonts/ClearSans-Regular/ClearSans-Regular.woff") format("woff"), url("../fonts/ClearSans-Regular/ClearSans-Regular.ttf") format("truetype"); }
+
 * {
   box-sizing: border-box; }
 
 body {
-  background-color: red; }
+  margin: 0; }
+
+body {
+  background-color: #f2f7f8; }
+
+header {
+  background-color: #fff; }
+
+header:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden; }
+
+header img {
+  display: inline-block;
+  float: left;
+  margin: 17px 25px; }
+
+header ul {
+  float: right;
+  padding: 0;
+  margin: 45px 0; }
+
+header li {
+  display: inline-block;
+  margin-right: 20px;
+  position: relative; }
+
+header li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font: 700 15px "ClearSans-Regular", sans-serif;
+  line-height: 21px;
+  color: #464954; }
+
+header .drop:after {
+  content: "";
+  display: block;
+  width: 9px;
+  height: 6px;
+  background-image: url(../img/arr_down.png);
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 8px;
+  right: -13px; }
+
+header .blue_item a {
+  color: #0080c6;
+  padding-left: 25px;
+  position: relative; }
+
+header .blue_item a:before {
+  content: "";
+  display: inline-block;
+  width: 21px;
+  height: 20px;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background-position: center;
+  left: 0; }
+
+header .video-camera a:before {
+  background-image: url(../img/video-camera.png); }
+
+header .star a:before {
+  background-image: url(../img/star.png); }
+
+header .hidden {
+  margin: 0;
+  opacity: 0;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.9);
+  min-width: 100%;
+  transition: all .2s;
+  padding: 10px 0; }
+
+header .hidden li {
+  display: block;
+  margin-top: 10px;
+  padding-left: 10px; }
+
+header .drop:hover .hidden {
+  opacity: 1;
+  transition: all .2s; }
