--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,7 +16,10 @@
 	box-sizing: border-box; }
 
 body {
-	margin: 0; }
+	margin: 0; 
+  background-color: #f2f7f8; 
+  padding-top: 111px; 
+}
 
 @import "breadCrumbs";
 @import "footer";
