--- a/app/scss/_pageTitle.scss
+++ b/app/scss/_pageTitle.scss
@@ -1,7 +1,7 @@
 .page-title {
 	text-align: left;
 	h1 {
-		margin: 15px auto 40px auto;
+		margin: 15px auto 0 auto;
 
 		font-family: Arial;
 		font-weight: bold;
