--- a/app/scss/_bootstrap.scss
+++ b/app/scss/_bootstrap.scss
@@ -1,8 +1,7 @@
 .container {
   margin-right: auto;
   margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 60px 15px 100px;
 }
 @media (min-width: 768px) {
   .container {
