--- a/app/scss/_pageTitle.scss
+++ b/app/scss/_pageTitle.scss
@@ -2,9 +2,7 @@
 	text-align: left;
 	h1 {
 		margin: 15px auto 0 auto;
-
-		font-family: Arial;
-		font-weight: bold;
+		font-family: "ClearSans-Bold", sans-serif;
 		font-size: 40px;
 		position: relative;
 		display: inline-block;
