--- a/app/scss/_newsDomira.scss
+++ b/app/scss/_newsDomira.scss
@@ -1,6 +1,6 @@
 .container .gridItems .item .item_image_wrapper img {
 	max-width: 360px;
-	max-height: 180px;
+	background-size: cover;
 }
 
 .container .grid_items .item .item_content_wrapper a {
