--- a/app/scss/_pageTitle.scss
+++ b/app/scss/_pageTitle.scss
@@ -1,11 +1,14 @@
 .page-title {
 	text-align: left;
-	h1 {
+	h1,	h2 {
 		margin: 15px auto 0 auto;
 		font-family: "ClearSans-Bold", sans-serif;
 		font-size: 40px;
 		position: relative;
 		display: inline-block;
 		text-transform: uppercase;
+	}
+	h2 {
+		font-size: 28px;
 	}
 }
