--- a/app/css/style.css
+++ b/app/css/style.css
@@ -18,7 +18,11 @@ body {
   background-color: #f2f7f8;
   padding-top: 111px;
   font-family: "ClearSans-Regular", sans-serif;
-  font-size: 14px; }
+  font-size: 14px;
+  position: relative; }
+
+main {
+  width: 100%; }
 
 .movie-media-block {
   display: -webkit-box;
@@ -188,13 +192,15 @@ img.thumbnail {
 
 .page-title {
   text-align: left; }
-  .page-title h1 {
+  .page-title h1, .page-title h2 {
     margin: 15px auto 0 auto;
     font-family: "ClearSans-Bold", sans-serif;
     font-size: 40px;
     position: relative;
     display: inline-block;
     text-transform: uppercase; }
+  .page-title h2 {
+    font-size: 28px; }
 
 footer {
   background-color: #fff;
@@ -203,7 +209,11 @@ footer {
   text-align: center;
   color: #b2b8ba;
   line-height: 20px;
-  font: 400 13px "ClearSans-Regular", sans-serif; }
+  font: 400 13px "ClearSans-Regular", sans-serif;
+  z-index: 9000;
+  position: absolute;
+  bottom: 0;
+  left: 0; }
 
 header {
   background-color: #fff;
@@ -921,9 +931,11 @@ header .drop:hover .hidden {
 .container .main_content_details .text_content_details {
   padding-right: 20px; }
 
-.container .main_content_details .text_content_details .page_text_content p {
+.container .main_content_details .text_content_details .page_text_content p,
+.container .main_content_text .text_content .page_text_content p {
   line-height: 22px;
-  font-size: 16px; }
+  font-size: 16px;
+  color: #464954; }
 
 .container .main_content_details .text_content_details:after {
   content: " ";
@@ -949,3 +961,28 @@ header .drop:hover .hidden {
 .container .grid_items .item .favorites_item_content_wrapper .box p {
   color: #5b5d62;
   line-height: 18px; }
+
+.container .main_content_text .text_content {
+  padding-right: 70px; }
+
+.container .main_content_text .text_content .page_text_content {
+  padding-bottom: 70px;
+  border-bottom: 2px solid #ffffff; }
+
+.container .main_content_text .text_content2 .page_text_content {
+  padding-bottom: 0;
+  border-bottom: none; }
+
+.container .main_content_text .text_content2 {
+  padding-top: 65px; }
+
+.page_text .main_content_img {
+  height: 100%;
+  width: 50%;
+  background-image: url(../img/pexels-photo1.png);
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-repeat: no-repeat;
+  background-position: top right;
+  background-size: cover; }
