--- a/app/scss/_newsDetailsDomira.scss
+++ b/app/scss/_newsDetailsDomira.scss
@@ -18,9 +18,11 @@
 	padding-right: 20px;
 }
 
-.container .main_content_details .text_content_details .page_text_content p {
+.container .main_content_details .text_content_details .page_text_content p,
+.container .main_content_text .text_content .page_text_content p {
 	line-height: 22px;
 	font-size: 16px;
+	color: #464954;
 }
 
 .container .main_content_details .text_content_details:after {
