--- a/app/css/style.css
+++ b/app/css/style.css
@@ -200,7 +200,8 @@ img.thumbnail {
     display: inline-block;
     text-transform: uppercase; }
   .page-title h2 {
-    font-size: 28px; }
+    font-size: 28px;
+    margin: 0 auto 0 auto; }
 
 footer {
   background-color: #fff;
@@ -962,20 +963,6 @@ header .drop:hover .hidden {
   color: #5b5d62;
   line-height: 18px; }
 
-.container .main_content_text .text_content {
-  padding-right: 70px; }
-
-.container .main_content_text .text_content .page_text_content {
-  padding-bottom: 70px;
-  border-bottom: 2px solid #ffffff; }
-
-.container .main_content_text .text_content2 .page_text_content {
-  padding-bottom: 0;
-  border-bottom: none; }
-
-.container .main_content_text .text_content2 {
-  padding-top: 65px; }
-
 .page_text .main_content_img {
   height: 100%;
   width: 50%;
@@ -986,3 +973,22 @@ header .drop:hover .hidden {
   background-repeat: no-repeat;
   background-position: top right;
   background-size: cover; }
+
+.page_text .container .main_content_text .text_content .page-title h2 {
+  margin: 20px 0; }
+
+.page_text .container .main_content_text .text_content {
+  padding-right: 70px; }
+
+.page_text .container .main_content_text .text_content .page_text_content {
+  border-bottom: 2px solid #fff;
+  padding-bottom: 50px;
+  margin-bottom: 45px; }
+
+.page_text .container .main_content_text .text_content:first-child .page-title h2 {
+  margin-bottom: 70px;
+  font-size: 40px; }
+
+.page_text .container .main_content_text .text_content:last-child .page_text_content {
+  border-bottom: none;
+  margin-bottom: 0; }
