--- a/app/scss/_aboutDomira.scss
+++ b/app/scss/_aboutDomira.scss
@@ -1,21 +1,3 @@
-.container .main_content_text .text_content {
-	padding-right: 70px;
-}
-
-.container .main_content_text .text_content .page_text_content {
-	padding-bottom: 70px;
-	border-bottom: 2px solid #ffffff;
-}
-
-.container .main_content_text .text_content2 .page_text_content {
-	padding-bottom: 0;
-	border-bottom: none;
-}
-
-.container .main_content_text .text_content2 {
-	padding-top: 65px;
-}
-
 .page_text .main_content_img {
 	height: 100%;
 	width: 50%;
@@ -28,5 +10,27 @@
 	background-size: cover;
 }
 
+.page_text .container .main_content_text .text_content .page-title h2 {
+	margin: 20px 0;
+}
 
+.page_text .container .main_content_text .text_content {
+	padding-right: 70px;
+}
+
+.page_text .container .main_content_text .text_content .page_text_content {
+	border-bottom: 2px solid #fff;
+	padding-bottom: 50px;
+	margin-bottom: 45px;
+}
+
+.page_text .container .main_content_text .text_content:first-child .page-title h2 {
+	margin-bottom: 70px;
+	font-size: 40px;
+}
+
+.page_text .container .main_content_text .text_content:last-child .page_text_content {
+	border-bottom: none;
+	margin-bottom: 0;
+}
 
