--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,9 +16,9 @@
 	box-sizing: border-box; }
 
 body {
-	margin: 0; 
-  background-color: #f2f7f8; 
-  padding-top: 111px; 
+	margin: 0;
+  background-color: #f2f7f8;
+  padding-top: 111px;
 }
 
 
@@ -27,3 +27,4 @@ body {
 @import "pageTitle";
 @import "footer";
 @import "header";
+@import "map";
