--- a/app/css/style.css
+++ b/app/css/style.css
@@ -345,3 +345,103 @@ header .drop:hover .hidden {
         .main-bottom-map-wrapper .main-bottom-map-info-block .main-bottom-map-social-block ul li {
           list-style-type: none;
           padding: 10px 0; }
+
+.banner-container::after {
+  display: table;
+  content: '';
+  clear: both; }
+
+.banner-container .banner-container-half {
+  float: left;
+  width: 50%;
+  display: inline-block;
+  height: 100%;
+  background-color: red; }
+
+.banner-container .banner-container-half:last-child {
+  background-color: #343744; }
+
+.banner-container .jk-list {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative; }
+  .banner-container .jk-list .jk-list-item {
+    color: #fff;
+    height: 250px;
+    overflow: hidden;
+    position: relative;
+    font: 700 15px "ClearSans-Regular", sans-serif; }
+    .banner-container .jk-list .jk-list-item img {
+      opacity: 0.1;
+      position: absolute;
+      width: 100%;
+      top: 50%;
+      left: 0;
+      -webkit-transform: translateY(-50%);
+              transform: translateY(-50%); }
+    .banner-container .jk-list .jk-list-item .jk-list-item-content {
+      display: inline-block;
+      position: absolute;
+      width: 500px;
+      top: 50%;
+      left: 50px;
+      -webkit-transform: translateY(-50%);
+              transform: translateY(-50%); }
+      .banner-container .jk-list .jk-list-item .jk-list-item-content .jk-list-item-title {
+        position: relative;
+        display: inline-block; }
+        .banner-container .jk-list .jk-list-item .jk-list-item-content .jk-list-item-title .jk-list-item-title-flag {
+          position: absolute;
+          left: 105%;
+          bottom: 0;
+          background-color: #0080c6;
+          border-radius: 1px;
+          display: inline-block;
+          padding: 5px;
+          text-transform: uppercase;
+          font-size: 16px; }
+        .banner-container .jk-list .jk-list-item .jk-list-item-content .jk-list-item-title h2 {
+          display: inline-block;
+          margin: 0;
+          font-size: 26px;
+          font-weight: 700;
+          line-height: 28px;
+          text-transform: uppercase;
+          font-family: "ClearSans-Bold"; }
+      .banner-container .jk-list .jk-list-item .jk-list-item-content .jk-list-item-text {
+        color: #d6d9e1;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 18px; }
+  .banner-container .jk-list .jk-list-nav {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    border-radius: 1px;
+    background-color: #0080c6;
+    width: 50px; }
+    .banner-container .jk-list .jk-list-nav .jk-list-nav-item {
+      width: 30px;
+      height: 40px;
+      margin: 5px auto;
+      background-color: #0070ae;
+      background-position: center center;
+      background-repeat: no-repeat; }
+      .banner-container .jk-list .jk-list-nav .jk-list-nav-item:hover {
+        cursor: pointer; }
+    .banner-container .jk-list .jk-list-nav .up {
+      background-image: url("../img/nav-up.png"); }
+    .banner-container .jk-list .jk-list-nav .down {
+      background-image: url("../img/nav-down.png"); }
+
+.main-map-top-block {
+  max-height: 100%;
+  height: 750px; }
