--- a/app/css/style.css
+++ b/app/css/style.css
@@ -24,6 +24,21 @@ body {
 main {
   width: 100%; }
 
+.container .button {
+  display: block;
+  color: #323438;
+  line-height: 20px;
+  font-size: 13px;
+  text-decoration: none;
+  width: 104px;
+  height: auto;
+  border-radius: 17px;
+  background-color: #ffffff;
+  border: none;
+  float: right;
+  text-align: center;
+  padding: 10px 0; }
+
 .movie-media-block {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -192,15 +207,19 @@ img.thumbnail {
 
 .page-title {
   text-align: left; }
-  .page-title h1, .page-title h2 {
+  .page-title h1, .page-title h2, .page-title h3 {
     margin: 15px auto 0 auto;
     font-family: "ClearSans-Bold", sans-serif;
     font-size: 40px;
     position: relative;
     display: inline-block;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    color: #323438; }
   .page-title h2 {
     font-size: 28px;
+    margin: 0 auto 0 auto; }
+  .page-title h3 {
+    font-size: 34px;
     margin: 0 auto 0 auto; }
 
 footer {
@@ -891,21 +910,6 @@ header .drop:hover .hidden {
   bottom: 2px;
   left: -17px; }
 
-.container .grid_items .item .item_content_wrapper .button {
-  display: block;
-  color: #323438;
-  line-height: 20px;
-  font-size: 13px;
-  text-decoration: none;
-  width: 104px;
-  height: auto;
-  border-radius: 17px;
-  background-color: #ffffff;
-  border: none;
-  float: right;
-  text-align: center;
-  padding: 10px 0; }
-
 .container .grid_items .item .item_content_wrapper:after {
   content: "";
   display: block;
@@ -1006,3 +1010,93 @@ header .drop:hover .hidden {
 .page_text .container .main_content_text .text_content:last-child .page_text_content {
   border-bottom: none;
   margin-bottom: 0; }
+
+main .wrapper .container .layout .button {
+  float: none;
+  background-color: #0080c6;
+  color: #fff;
+  margin: 0 auto; }
+
+main .wrapper .container .layout ul {
+  padding: 0;
+  display: inline-block;
+  margin-bottom: 60px; }
+
+main .wrapper .container .layout ul li {
+  list-style-type: none;
+  display: inline-block;
+  background-color: #fff;
+  margin: 0;
+  padding: 20px 30px;
+  position: relative; }
+
+main .wrapper .container .layout ul li a {
+  color: #0080c6;
+  font-size: 14px;
+  text-decoration: none;
+  border-bottom: 2px dotted #0080c6;
+  line-height: 30px;
+  transition: all 0.2s; }
+
+main .wrapper .container .layout {
+  text-align: center; }
+
+main .wrapper .container .layout .layout_img {
+  display: inline-block;
+  text-align: center;
+  margin-bottom: 30px; }
+
+main .wrapper .container .layout ul li:hover a,
+main .wrapper .container .layout ul li:active a {
+  color: #323438;
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-bottom: none;
+  transition: all 0.2s; }
+
+main .wrapper .container .layout ul li::after {
+  content: '';
+  position: absolute;
+  border: 10px solid transparent;
+  border-left: 10px solid #fff;
+  border-top: 10px solid #fff;
+  bottom: -20px;
+  left: 30px;
+  display: none; }
+
+main .wrapper .container .layout li:hover::after {
+  display: block; }
+
+main .wrapper .container .layout .page-title {
+  text-align: center;
+  position: relative;
+  padding: 0 95px;
+  margin-bottom: 60px; }
+
+main .wrapper .container .layout .page-title h3 {
+  display: inline-block; }
+
+.wrapper .container .layout .page-title::before {
+  content: '';
+  display: block;
+  width: 90px;
+  height: 2px;
+  background-color: #323438;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%); }
+
+.wrapper .container .layout .page-title::after {
+  content: '';
+  display: block;
+  width: 90px;
+  height: 2px;
+  background-color: #323438;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%); }
