--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -31,7 +31,7 @@ main {
 .container .button {
   display: block;
   color: #323438;
-  line-height: 20px;
+  line-height: 34px;
   font-size: 13px;
   text-decoration: none;
   width: 104px;
@@ -41,7 +41,6 @@ main {
   border: none;
   float: right;
   text-align: center;
-  padding: 10px 0;
 }
 
 @import "domiratv";
@@ -55,3 +54,4 @@ main {
 @import "favoritesDomira";
 @import "aboutDomira";
 @import "homeDomira";
+@import "apartmentDomira";
