Added new version of header

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -350,6 +350,9 @@ header .drop:hover .hidden {
   opacity: 1;
   transition: all .2s; }
 
+.mark {
+  color: #0080c6; }
+
 .container {
   margin-right: auto;
   margin-left: auto;
