--- a/app/scss/_apartmentDomira.scss
+++ b/app/scss/_apartmentDomira.scss
@@ -52,6 +52,7 @@ main .container .main_content_apartment .img_content_apartment .main_img {
 main .container .main_content_apartment {
 	padding: 70px 0;
 	border-bottom: 2px solid #fff;
+	margin-bottom: 70px;
 }
 
 main .container .main_content_apartment .info_content_apartment {
@@ -75,6 +76,7 @@ main .container .main_content_apartment .info_content_apartment .number_of .flat
 	display: inline-block;
 	color: #464954;
 	line-height: 17px;
+	margin: 0;
 }
 
 main .container .main_content_apartment .info_content_apartment .number_of .flat .remaining {
@@ -111,4 +113,68 @@ main .container .main_content_apartment .info_content_apartment .number_of .butt
 	position: absolute;
 	top: calc(50% - 13px/2);
 	left: 37px;
+}
+
+main .container .main_content_apartment .info_content_apartment .statistics .item_stat,
+main .container .main_content_apartment .info_content_apartment .number_of {
+	margin: 25px 0 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+}
+
+main .container .main_content_apartment .info_content_apartment .statistics .item_stat:last-child {
+	margin: 35px 0 0;
+}
+
+main .container .main_content_apartment .info_content_apartment .statistics .item_stat:first-child {
+	margin: 0 0 0;
+}
+
+main .container .main_content_apartment .info_content_apartment .statistics .item_stat .area {
+	color: #0080c6;
+	font-family: "ClearSans-Bold";
+	font-size: 16px;
+	border-bottom: 2px dotted #0080c6;
+}
+
+main .container .main_content_apartment .info_content_apartment .statistics .item_stat .use {
+	color: #464954;
+	font-size: 15px;
+}
+
+main .container .main_content_apartment .info_content_apartment .statistics .item_stat .hr {
+	background-color: #edf0f1;
+	height: 1px;
+	flex-grow: 1;
+}
+
+main .container .main_content_apartment .info_content_apartment .statistics .item_stat:last-child .area {
+	color: #464954;
+	border-bottom: none;
+}
+
+main .container .main_content_apartment .info_content_apartment .model .number_of {
+	padding: 0;
+	border-bottom: none;
+	margin-top: 60px;
+}
+
+main .container .main_content_apartment .info_content_apartment .model img {
+	max-width: 360px;
+}
+
+main .container .main_content_apartment .info_content_apartment .model .number_of .button::before {
+	content: none;
+	padding-left: 37px;
+}
+
+main .container .main_content_apartment .info_content_apartment .model .number_of .button {
+	padding-left: 37px;
+	background-color: #0080c6;
+	color: #fff;
+	font-family: "ClearSans-Bold";
+	font-size: 14px;
+	text-transform: uppercase;
 }
