--- a/app/scss/_newsDetailsDomira.scss
+++ b/app/scss/_newsDetailsDomira.scss
@@ -19,7 +19,8 @@
 }
 
 .container .main_content_details .text_content_details .page_text_content p,
-.container .main_content_text .text_content .page_text_content p {
+.container .main_content_text .text_content .page_text_content p,
+.container .secondary_content_apartment .page_text_content p {
 	line-height: 22px;
 	font-size: 16px;
 	color: #464954;
