--- a/app/scss/_newsAndSales.scss
+++ b/app/scss/_newsAndSales.scss
@@ -29,9 +29,26 @@
 		width: 100%;
 	}
 	.news-item {
+		td{
+			border-bottom: 1px dotted #cacfd1;
+		}
 		.content, .image {
-			padding: 30px 0;
-		}		
+			vertical-align: top;
+			padding: 20px 0;
+		}
+		.content{
+			padding-left: 20px;
+		}
+		.news-and-sales-content{
+			a{
+				color: #0080c6;
+				font-family: "Clear Sans";
+				font-size: 19px;
+				font-weight: 400;
+				line-height: 26px;
+				text-decoration: underline;
+			}
+		}
 	}
 	.sales {
 		h3 {
@@ -42,7 +59,7 @@
 			color: #fff;
 			background-color: #0072b0;
 			padding: 10px 20px;
-			margin-right: 3px;	
+			margin-right: 3px;
 			margin-top: 10px;
 			cursor: pointer;
 			&:hover {
