--- a/app/scss/_domiratv.scss
+++ b/app/scss/_domiratv.scss
@@ -7,7 +7,6 @@
 }
 
 .movie-media-container{
-  position: fixed;
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
@@ -23,10 +22,11 @@
   text-align: center;
   width: 200px;
   min-width: 330px;
+  margin-bottom: 50px;
 }
 
 .movie-media-video{
-  height: 82%;
+  height: auto;
 }
 
 .movie-media-block-item .thumbnail{
@@ -39,7 +39,7 @@
   display: flex;
   width: 100%;
   height: 100%;
-  height: calc(100% - 32px);
+  height: calc(100% - 49px);
 
 }
 
@@ -70,7 +70,7 @@
 .start-video{
   display: block;
   width: 100%;
-  height: 100%;
+  height: 80%;
   position: absolute;
   top: 0%;
   left: 0%;
@@ -78,9 +78,7 @@
 
 .start-video-play {
   position: absolute;
-  /*top: 80px;*/
   padding: 12px;
-  /*left: 174px;*/
   opacity: .3;
   cursor: pointer;
   transition: all 0.3s;
@@ -129,21 +127,19 @@ img.thumbnail
 .movie-media-content-wraper{
   position: relative;
   text-align: left;
-  margin-top: 14px;
+  margin-top: 20px;
 }
 
 .movie-media-content-title{
   font-size: 18px;
   color: #323438;
-  width: 220px;
-  height: 16px;
+  width: 100%;
   font-weight: 400;
   line-height: 21px;
 }
 
 .movie-media-content-description{
   margin-top: 12px;
-  height: 31px;
   color: #5b5d62;
   font-size: 14px;
   font-weight: 400;
