Add planning tabulation

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1055,12 +1055,16 @@ main .wrapper .container .layout {
   text-align: center; }
 
 main .wrapper .container .layout .layout_img {
-  display: inline-block;
+  display: none;
   text-align: center;
   margin-bottom: 30px; }
 
+main .wrapper .container .layout .active {
+  display: inline-block; }
+
 main .wrapper .container .layout ul li:hover a,
-main .wrapper .container .layout ul li:active a {
+main .wrapper .container .layout ul li:active a,
+main .wrapper .container .layout .active_li a {
   color: #323438;
   font-size: 18px;
   font-weight: 700;
@@ -1078,7 +1082,8 @@ main .wrapper .container .layout ul li::after {
   left: 30px;
   display: none; }
 
-main .wrapper .container .layout li:hover::after {
+main .wrapper .container .layout li:hover::after,
+main .wrapper .container .layout .active_li:after {
   display: block; }
 
 main .wrapper .container .layout .page-title {
